--- a/resources.html
+++ b/resources.html
@@ -13,15 +13,17 @@
     <a class="brand" href="index.html">
       <img src="assets/images/osu-daytraders-logo.png" alt=""/>
       <span>OSU Day Traders</span>
-    </a>
+          <li><a </a></li>
     <nav class="site-nav">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="events.html">Events</a>
-      <a class="active" href="resources.html">Resources</a>
-      <a href="account.html">Account</a>
-      <a href="contact.html">Contact</a>
-      <a href="applications.html">Applications</a>
+            <ul>
+      <li><a href="index.html">Home      <li><a </a></li></li>
+      <li><a href="about.html">About      <li><a </a></li>
+      <li><a href="events.html">Events      <li><a </a></li>
+      <li><a class="active" href="resources.html">Resources      <li><a </a></li>
+      <li><a href="account.html">Account      <li><a </a></li>
+      <li><a href="contact.html">Contact      <li><a </a></li>
+      <li><a href="applications.html">Applications      <li><a </a></li>
+              </ul>
     </nav>
   </div>
 </header>
@@ -34,7 +36,7 @@
   <div class="wrap hero__content">
     <h1>Resources</h1>
     <p>Free playbooks and previews below. Unlock the full OSU-only course when you’re signed in with an <strong>@osu.edu</strong> email.</p>
-    <a class="hero__signin" href="account.html">Sign in</a>
+    <a class="hero__signin" href="account.html">Sign in      <li><a </a></li>
   </div>
 
   <!-- transparent, slow “stock bars” animation -->
@@ -78,7 +80,7 @@
       <div class="lock" aria-hidden="true"></div>
       <h2>OSU-only course: Day Trading Fundamentals</h2>
       <p>Sign in with <strong>@osu.edu</strong> and subscribe to unlock all modules, quizzes, and notes.</p>
-      <a href="account.html" class="btn btn-ghost">Subscribe</a>
+      <li><a href="account.html" class="btn btn-ghost">Subscribe      <li><a </a></li>
     </div>
     <ul class="members__list">
       <li>Day 1: Market Foundations</li>
