Fix account.html navigation: add <ul> wrapper

--- a/account.html
+++ b/account.html
@@ -10,18 +10,20 @@
 <body>
   <header class="site-header">
     <div class="wrap">
-      <a class="brand" href="index.html">
+      <li><a class="brand" href="index.html">
         <img src="assets/images/osu-daytraders-logo.png" alt="" />
         <span>OSU Day Traders</span>
-      </a>
+            <li><a </a></li>
       <nav class="site-nav">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="events.html">Events</a>
-        <a href="resources.html">Resources</a>
-        <a class="active" href="account.html">Account</a>
-        <a href="contact.html">Contact</a>
-        <a href="applications.html">Applications</a>
+              <ul>
+        <li><a href="index.html">Home      <li><a </a></li>
+        <li><a href="about.html">About      <li><a </a></li>
+        <li><a href="events.html">Events      <li><a </a></li>
+        <li><a href="resources.html">Resources      <li><a </a></li>
+        <li><a class="active" href="account.html">Account      <li><a </a></li>
+        <li><a href="contact.html">Contact      <li><a </a></li>
+        <li><a href="applications.html">Applications      <li><a </a></li>
+                </ul>
       </nav>
     </div>
   </header>
@@ -64,7 +66,7 @@
         </div>
 
         <div class="row gap mt">
-          <a href="resources.html" class="btn btn-ghost">Go to Resources</a>
+          <li><a href="resources.html" class="btn btn-ghost">Go to Resources      <li><a </a></li>
           <button id="signOutBtn" class="btn btn-danger">Sign out</button>
         </div>
 
