--- a/account.html
+++ b/account.html
@@ -13,8 +13,7 @@
       <li><a class="brand" href="index.html">
         <img src="assets/images/osu-daytraders-logo.png" alt="" />
         <span>OSU Day Traders</span>
-            <li><a </a></li>
-      <nav class="site-nav">
+    </a>      <nav class="site-nav">
               <ul>
         <li><a href="index.html">Home      <li><a </a></li>
         <li><a href="about.html">About      <li><a </a></li>
