--- a/account.html
+++ b/account.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="wrap">
-      <li><a class="brand" href="index.html">
+      <a class="brand" href="index.html">
         <img src="assets/images/osu-daytraders-logo.png" alt="" />
         <span>OSU Day Traders</span>
-    </a>      <nav class="site-nav">
+    </a>
+              <nav class="site-nav">      
               <ul>
         <li><a href="index.html">Home      <li><a </a></li>
         <li><a href="about.html">About      <li><a </a></li>
@@ -24,7 +24,6 @@
         <li><a href="applications.html">Applications      <li><a </a></li>
                 </ul>
       </nav>
-    </div>
   </header>
 
   <main class="wrap section">
