--- a/contact.html
+++ b/contact.html
@@ -164,6 +164,8 @@
         <li><a href="about.html">About</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="resources.html">Resources</a></li>
+        <!-- Added: Account link -->
+        <li><a href="account.html">Account</a></li>
         <li><a class="active" href="contact.html">Contact</a></li>
         <li><a href="applications.html">Applications</a></li>
       </ul>
